<resources>
    <string name="app_name">LCP - Lista de Compras Personalizadas</string>
    <string name="app_name1">LCP</string>
    <string name="app_name2">Lista de Compras Personalizadas</string>
    <string name="name_pt01">Lista de Compras</string>
    <string name="name_pt02">Personalizadas</string>
    <string name="main_menu01">Criar e Editar Listas</string>
    <string name="main_desc_menu01">Crie e Edite suas listas de compras.</string>
    <string name="main_menu02">Consultar Lista</string>
    <string name="main_desc_menu02">Faça a consulta de todas as listas já criadas.</string>
    <string name="main_menu03">Conferir Extrato</string>
    <string name="main_desc_menu03">Veja os extratos e valores de suas compras.</string>
    <string name="main_menu04">Ajuda e Ajustes</string>
    <string name="main_desc_menu04">Informações de uso e alguns ajustes do aplicativo.</string>
    <string name="main_menu05">Gráfico de Consumo</string>
    <string name="main_desc_menu05">Consulte o consumo de todas as suas compras.</string>
    <string name="main_menu06">Sobre</string>
    <string name="main_desc_menu06">Informações gerais sobre o app e desenvolvedores.</string>
    <string name="main_menu07">Splash Screen</string>
    <string name="main_desc_menu07">Tela de controle gráfico que consiste em um carregamento inicial.</string>
    <string name="main_menu08">Onboarding</string>
    <string name="main_desc_menu08">Tela de ajuda aos usuários que consiste em entender a funcionalidade da aplicação.</string>
    <string name="main_menu09">Temporária</string>
    <string name="main_desc_menu09">Tela elaborada para teste de viabilidade de funções da aplicação.</string>
    <string name="tips_txt">Dicas de Uso!</string>
    <string name="tips01">Seja bem-vindo!</string>
    <string name="tips_desc01">
        Esta é uma aplicação desenvolvida para a elaboração de listas de compras, de um modo simples, prático e rápido.
        \n\nO Lista de Compras Personalizadas, é um aplicativo mobile para Android que tem como sua principal e, única função, lhe auxiliar no processo de elaboração de sua lista de compras em cada mês.
    </string>
    <string name="tips02">Crie sua Lista de Compras!</string>
    <string name="tips_desc02">
        Crie listas de compras facilmente adicionando os produtos desejados, podendo removê-los, aumentando ou diminuindo a quantiadade.
        \n\nComo você quiser, tudo de maneira simples e organizada.
    </string>
    <string name="tips03">Consulte-as de onde você estiver!</string>
    <string name="tips_desc03">
        O aplicativo não necessita de conexão à internet para ter acesso às suas listas de compras, podendo assim cria-las e sair de casa despreocupado(a), com ou sem internet disponível.
    </string>
    <string name="tips04">Tenha controle sobre seu consumo!</string>
    <string name="tips_desc04">
        Como o LCP (Lista de Compras Personalizadas) você poderá contar com um gráfico que irá lhe mostrar o valor total de todas as suas últimas compras.
    </string>
    <string name="tips05">Facilite sua vida!</string>
    <string name="tips_desc05">
        Com o aplicativo, você poderá facilitar algo que parece simples e rotineiro na vida de nossos usuários.
        \n\nOnde o objetivo principal é ter mais praticidade e rapidez na hora de fazerem suas compras, sendo uma lista inteligente, organizada e comparando o valor total das compras.
    </string>
    <string name="tips06">Lista de Compras Personalizadas!</string>
    <string name="tips_desc06_01">
        Esta aplicação é resultado do fruto de muita dedicação e empenho dos desenvolvedores. Sendo o Trabalho de conclusão do Curso de Desenvolvimento de Sistemas, da Escola Técnica Estadual (ETEC) do estado de São Paulo, da cidade de Cruzeiro. Partindo do problema de pesquisa em que consiste em:  “Como simplificar as listas de compras para a ida ao supermercado atualmente? ”
    \n\nOnde assim, o objetivo geral do trabalho se apresentou em desenvolver uma aplicação mobile, cujo sua funcionalidade possibilite ao usuário criar uma lista de compras, para auxiliá-los quando estiverem no mercado adquirindo seus itens de compra. Especificamente substituindo a lista de papel, esta que costuma dar mais trabalho ou, até mesmo, chega a ser perdida em horas que a sua consulta é imprescindível.
    \n\nSendo assim, a ideia do aplicativo mobile é facilitar na criação de lista de compras, que irão lhe auxiliar. Assim, com o desenvolvimento desta aplicação, os desenvolvedores puderam implementar os conhecimentos adquiridos durando o período acadêmico, além de adquirir novas experiências e técnicas. Além de que o usuário, ao utilizar esta aplicação, perceberá que em meio a dificuldades ocorridas durante as compras, uma simples aplicação irá estabelecer em sua rotina uma grande facilidade durante a utilização, podendo também ajudá-lo a gerenciar suas economias.

    </string>
    <string name="idProduct">ID Produto</string>
    <string name="idListP">ID Lista (Produto)</string>
    <string name="checkProduct">Checar Produto</string>
    <string name="nomeProduct">Nome do Produto</string>
    <string name="quantProduct">Quantidade</string>
    <string name="medidaProduct">Tipo de Medida</string>
    <string name="tipoProduct">Categoria</string>
    <string name="valorProduct">Valor do Produto</string>
    <string name="totalProduct">Valor Total</string>
    <string name="valorProductEdit">Valor do Produto: </string>
    <string name="idListL">ID Lista (Lista)</string>
    <string name="nomeList">Nome da Lista</string>
    <string name="dataList">Data de Criação da Lista</string>
    <string name="checkList">Checar Lista</string>
    <string name="totalList">Valor Total da Lista</string>
    <string name="idListC">ID Lista (Consulta)</string>
    <string name="editList">Editar Lista</string>
    <string name="add">Adicionar</string>
    <string name="addProduct">Adicionar Produto</string>
    <string name="editProduct">Editar Produto</string>
    <string name="editProductMult">Múltipla edição de Produtos</string>
    <string name="editedProduct">Produto editado com sucesso!</string>
    <string name="editedProduct_addValor">Valor do produto adicionado com sucesso!</string>
    <string name="erro_product">Erro ao editar o produto!</string>
    <string name="deletedProduct">Produto apagado com sucesso!</string>
    <string name="remProduct">Remover Produto</string>
    <string name="deletProduct">Apagar Produto</string>
    <string name="erro_lista">Erro carregar lista!</string>
    <string name="addList">Adicionar Lista</string>
    <string name="addList1">Criar Lista</string>
    <string name="valor">Valor:</string>
    <string name="total">Total:</string>
    <string name="valorTotal">Total:</string>
    <string name="valorTotalList">Valor total de todos os produtos desta Lista:</string>
    <string name="sltList_obs02_incart">Está no carrinho</string>
    <string name="sltList_obs02_nocart">Não está no carrinho</string>
    <string name="sltList_alert01">Selecione uma lista ou crie uma nova:</string>
    <string name="sltList_alert02">Selecione uma lista para consultar:</string>
    <string name="sltList_alert03">Selecione uma lista para ver o extrato:</string>
    <string name="sltList_obs01">* Só podem ser editadas listas não consultadas.</string>
    <string name="sltList_obs02">* Faça a consulta de suas listas aqui.</string>
    <string name="sltList_obs02_new">Deseja criar uma nova lista?</string>
    <string name="sltList_obs02_cart">O produto foi adicionado ao carrinho?</string>
    <string name="sltList_obs02_cart2A">O produto ainda não foi adicionado ao carrinho!</string>
    <string name="sltList_obs02_cart2S">O produto ainda não foi adicionado ao carrinho. Clique aqui para confirmar!</string>
    <string name="sltList_obs02_cart2N">O produto já está no carrinho!</string>
    <string name="sltList_obs02_obs">Adicionado todos os produtos ao carrinho, a lista será concluída.</string>
    <string name="sltProduct02_editTipo">Selecione qual o tipo de edição:</string>
    <string name="sltProduct02_editTipoObs">Selecione o tipo de edição para adicionar o valor aos produtos e finalizar a lista, este que mais se enquadra com o momento atual!</string>
    <string name="sltProduct02_editTipoUni">Edições Unitárias</string>
    <string name="sltProduct02_editTipoMult">Múltiplas Edições</string>
    <string name="sltList_obs03">* Só serão exibidas listas consultadas.</string>
    <string name="sltProduct01_deletObs">Apagar produto selecionado:</string>
    <string name="sltProduct02_editObs">Editar produto selecionado:</string>
    <string name="sltProduct02_exitList">A lista já foi concluída?</string>
    <string name="sltProduct02_exitListObs">
        Alguns itens não foram adicionados ao carrinho!
        \nVocê deseja finalizar a lista mesmo assim? Para poder editá-la novamente.
    </string>
    <string name="sltList_obs02_editMult">Adicione o valor do produto e defina se foi ou não adicionado ao carrinho!</string>
    <string name="sltProduct03_editObs">Adicionar valor do produto:</string>
    <string name="sltProduct03_reEdit">Editar Lista?</string>
    <string name="sltProduct03_reEditObs">
        Você poderá editar os produtos com a opção (Criar e Editar Lista) ou editar os valores com a opção (Consultar Lista)?
        \n\nAssim a lista será editável até que seja concluída novamente.
    </string>
    <string name="header_title01">1ª Lista finalizada:</string>
    <string name="addedProduct">Produto Adicionado!</string>
    <string name="noaddedProduct">Erro ao adicionar Produto!</string>
    <string name="isCheckProduct">Produto OK!</string>
    <string name="isCheckList">Lista OK!</string>
    <string name="remove">Remover</string>
    <string name="save">Salvar</string>
    <string name="menu">Acessar Menu</string>
    <string name="AdView">AdView</string>
    <string name="voltar">Voltar</string>
    <string name="doubleExit">Pressione o voltar duas vezes seguidas para sair.</string>
    <string name="continuar">Continuar</string>
    <string name="proximo">Próximo ≫</string>
    <string name="anterio">≪ Anterior</string>
    <string name="cancelar">Cancelar</string>
    <string name="cancel">Operação cancelada!</string>
    <string name="inicio">Iniciar</string>
    <string name="sair">Sair</string>
    <string name="menu_inicio">Início</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
    <string name="nada"> </string>
    <string name="aces_fast">Acesso Rápido</string>
    <string name="ico_dw_open">Abrir Menu de Navegação</string>
    <string name="ico_dw_close">Fechar Menu de Navegação</string>
    <string name="dev">Desenvolvedores</string>
    <string name="doc">Documentação</string>
    <string name="site">Site</string>
    <string name="github">GitHub</string>
    <string name="instagram">Instagram</string>
    <string name="termos">Termos de Uso</string>
    <string name="doc_txt">Acessar a Documentação do LCP.</string>
    <string name="site_txt">Acessar site da aplicação.</string>
    <string name="github_txt">Acessar repositório da aplicação no GitHub.</string>
    <string name="instagram_txt">Acessar o instagram do LCP.</string>
    <string name="termos_txt">Acessar o Termos de Uso do LCP.</string>
    <string name="dev01">Denilson Fabiano de Araujo</string>
    <string name="dev02">Izabela Aquino de Oliveira</string>
    <string name="dev03">Jorge Henrique Coutinho de Meirelles</string>
    <string name="dev04">Marcos Brendow Silva Santos</string>
    <string name="dev05">Weslei Giovani Evaristo da Silva</string>
    <string name="num0">00</string>
    <string name="num1">ID: 000</string>
    <string name="num2">R$ 0.00</string>
    <string name="num3">00 × R$ 0.00</string>
    <string name="num4">100 %</string>
    <string name="num5">ID: 00 | R$ 0.00</string>
    <string name="num6">R$ 000.00</string>
</resources>