<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item android:title="@string/aces_fast">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_menu01"
                        android:icon="@drawable/ic_main_menu01"
                        android:title="@string/main_menu01"/>

                    <item
                        android:id="@+id/nav_menu02"
                        android:icon="@drawable/ic_main_menu02"
                        android:title="@string/main_menu02" />

                    <item
                        android:id="@+id/nav_menu03"
                        android:icon="@drawable/ic_main_menu03"
                        android:title="@string/main_menu03" />

                    <item
                        android:id="@+id/nav_menu04"
                        android:icon="@drawable/ic_main_menu04"
                        android:title="@string/main_menu04" />

                    <item
                        android:id="@+id/nav_menu06"
                        android:icon="@drawable/ic_main_menu06"
                        android:title="@string/main_menu06" />

                </group>
            </menu>
        </item>
    </group>

</menu>