<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cor_gradient_branco"
    tools:context=".A_A_SplashScreenActivity"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_full_color"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/app_name1"
            android:padding="10dp"
            app:srcCompat="@drawable/lg_lcp_color_t" />

        <TextView
            android:id="@+id/name_pt01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue"
            android:text="@string/name_pt01"
            android:textAlignment="center"
            android:textColor="@color/textAzul02_t"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/name_pt02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue"
            android:text="@string/name_pt02"
            android:textAlignment="center"
            android:textColor="@color/textAzul01_t"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>